--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "populate": "^5.0.1",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.7.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "winston": "^3.11.0"
   },
   "type": "module",
