--- a/package.json
+++ b/package.json
@@ -29,17 +29,20 @@
   "type": "module",
   "name": "desafio-refactor",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "src/app.js",
   "scripts": {
-    "start": "nodemon src/app.js"
+    "start": "nodemon src/app.js",
+    "dev": "nodemon ./src/app.js",
+    "test": "mocha ./src/test/*.test.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "chai": "^5.0.0",
+    "chai": "^5.0.3",
+    "chai-http": "^4.4.0",
     "mocha": "^10.2.0",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.4"
   }
 }
