--- a/src/docs/Carts.yaml
+++ b/src/docs/Carts.yaml
@@ -1,37 +1,17 @@
 openapi: 3.0.1
 info:
-  title: Documentacion de Api - Carritos
-  description: Documentacion de la API para la gestión de carritos
+  title: Documentación de la API de Carritos de Compra
+  description: Documentación Swagger para la API de Carritos de Compra
   version: 1.0.0
-tags:
-  - name: Carts
 paths:
-  /api/carts:
+  /carts/{cid}:
     get:
-      summary: Obtiene todos los carritos
-      description: Retorna todos los carritos disponibles
-      tags:
-        - Carts
-      responses:
-        '200':
-          description: Operación exitosa
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Carts'
-              message: Operación exitosa
-        '500':
-          description: Error interno del servidor
-  /api/carts/{cid}:
-    get:
-      summary: Obtiene los datos de un carrito por ID
+      summary: Obtener un carrito por su ID
       parameters:
-        - name: cid
-          in: path
+        - in: path
+          name: cid
           required: true
-          description: ID del carrito solicitado
+          description: ID del carrito a obtener
           schema:
             type: string
       responses:
@@ -40,12 +20,54 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Carts'
-        '500':
-          description: Error interno del servidor
+                $ref: '#/components/schemas/Cart'
+        '404':
+          description: Carrito no encontrado
+    delete:
+      summary: Eliminar un carrito por su ID
+      parameters:
+        - in: path
+          name: cid
+          required: true
+          description: ID del carrito a eliminar
+          schema:
+            type: string
+      responses:
+        '204':
+          description: Carrito eliminado correctamente
+        '404':
+          description: Carrito no encontrado
+  /carts:
+    post:
+      summary: Crear un nuevo carrito
+      responses:
+        '201':
+          description: Carrito creado correctamente
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Cart'
+        '400':
+          description: Solicitud incorrecta
 components:
   schemas:
-    Carts:
+    Cart:
       type: object
       properties:
-        // Propiedades del carrito aquí
+        _id:
+          type: string
+          description: ID del carrito
+        user:
+          type: string
+          description: Usuario asociado al carrito
+        products:
+          type: array
+          items:
+            type: object
+            properties:
+              productId:
+                type: string
+                description: ID del producto
+              quantity:
+                type: number
+                description: Cantidad del producto en el carrito
