--- a/src/docs/Products.yaml
+++ b/src/docs/Products.yaml
@@ -1,37 +1,46 @@
 openapi: 3.0.1
 info:
-  title: Documentacion de Api
-  description: Documentacion de la API
+  title: Documentación de la API de Productos
+  description: Documentación Swagger para la API de Productos
   version: 1.0.0
-tags:
-  - name: Products
 paths:
-  /api/products:
+  /products:
     get:
-      summary: Obtiene todos los productos
-      description: Retorna todos los productos disponibles
-      tags:
-        - Products
+      summary: Obtener todos los productos
       responses:
         '200':
-          description: Operación exitosa
+          description: Lista de productos obtenida correctamente
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Products'
-              message: Operación exitosa
-        '500':
-          description: Error interno del servidor
-  /api/products/{pid}:
+                  $ref: '#/components/schemas/Product'
+    post:
+      summary: Crear un nuevo producto
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ProductInput'
+      responses:
+        '201':
+          description: Producto creado correctamente
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Product'
+        '400':
+          description: Solicitud incorrecta
+  /products/{id}:
     get:
-      summary: Obtiene los datos de un producto por ID
+      summary: Obtener un producto por su ID
       parameters:
-        - name: pid
-          in: path
+        - in: path
+          name: id
           required: true
-          description: ID del producto solicitado
+          description: ID del producto a obtener
           schema:
             type: string
       responses:
@@ -40,12 +49,41 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Products'
-        '500':
-          description: Error interno del servidor
+                $ref: '#/components/schemas/Product'
+        '404':
+          description: Producto no encontrado
 components:
   schemas:
-    Products:
+    Product:
       type: object
       properties:
-        // Propiedades del producto aquí
+        _id:
+          type: string
+          description: ID del producto
+        description:
+          type: string
+          description: Descripción del producto
+        price:
+          type: number
+          description: Precio del producto
+        stock:
+          type: integer
+          description: Cantidad en stock del producto
+        category:
+          type: string
+          description: Categoría del producto
+    ProductInput:
+      type: object
+      properties:
+        description:
+          type: string
+          description: Descripción del producto
+        price:
+          type: number
+          description: Precio del producto
+        stock:
+          type: integer
+          description: Cantidad en stock del producto
+        category:
+          type: string
+          description: Categoría del producto
